--- a/work.ipynb
+++ b/work.ipynb
@@ -1090,10 +1090,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b098cb05dfd27d7602187c64ea925c25913dd62ba1da1fd16200f5cd2b2a2205"
+   "hash": "dad35ac5c78b496eda946afbd550ec296dcc8552236347d45adb0399e9bdd932"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.5 ('base')",
+   "display_name": "Python 3.9.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1107,7 +1107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.10"
   },
   "orig_nbformat": 4
  },
